--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,10 @@
 <div class="jumbotron text-center">
   <h1 class="display-3">{{title}}</h1>
   <p class="lead">Jot down ideas for your next YouTube videos.</p>
+  {{#if user}}
   <a href="/ideas/add" class="btn btn-dark btn-lg">Add Video Idea</a>
+  {{else}}
+  <a href="/users/login" class="btn btn-dark btn-lg">Login</a>
+  <a href="/users/register" class="btn btn-primary btn-lg">Register</a>
+  {{/if}}
 </div>
